--- a/WindowsProject1/WindowsProject1.vcxproj.filters
+++ b/WindowsProject1/WindowsProject1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="WindowsProject1.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="BIF.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WindowsProject1.cpp">
